--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <div class="container">
         <div class="avatar">
             <a href="">
-                <img src="./images/cat-codespace.png" alt="Skytsunami" />
+                <img src="image.png" alt="Skytsunami" />
             </a>
         </div>
         <div class="content">
-            <h1>CodeSpace Cat</h1>
+            <h1>Siyabonga Masenya </h1>
             <p>Follow me on:</p>
             <p>
-                <span><a href="https://github.com/CodeSpace-Academy"><img src="./images/icons8-github-96.png" alt="GitHub"></a></span>
-                <span><a href="https://www.linkedin.com/school/codespaceza/"><img src="./images/icons8-linkedin-96.png" alt="LinkedIn"></a></span>
-                <span><a href=""><img src="./images/icons8-codepen-96.png" alt="CodePen"></a></span>
+                <span><a href="https://github.com/Xuzzie"><img src="./images/icons8-github-96.png" alt="GitHub"></a></span>
+                <span><a href="https://www.linkedin.com/in/siyabonga-masenya-105287179/"><img src="./images/icons8-linkedin-96.png" alt="LinkedIn"></a></span>
+                <span><a href="https://codepen.io/siyabonga-masenya"><img src="./images/icons8-codepen-96.png" alt="CodePen"></a></span>
             </p>
         </div>
     </div>    
